# FlowerOfLife

./: .gitignore  CMakeLists.txt  README.md
source/: figure.hpp  flowerOfLife.cpp  tools.hpp
